Cleanup and add mailer previews

--- a/app/views/admin_mailer/gift_crossed.text.erb
+++ b/app/views/admin_mailer/gift_crossed.text.erb
@@ -1,9 +1,9 @@
 Dear Iain and Tania,
 
-The following gift has been crossed off/contributed towards:
+A contribution has been made towards your honeymoon by the following guest(s):
 
-Guest Names: <%= @cg.guest_names %>
-Contribution Amount: <%= number_to_currency @cg.contribution_amount %>
+Guest Names: <%= @contribution.guest_names %>
+Contribution Amount: <%= number_to_currency @contribution.contribution_amount %>
 
 Cheers,
 Your Wedding Website Mailer
