--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,14 @@
 @import "owl";
 @import "text";
 @import "images";
+@import "grid";
+@import "media";
+@import "modals";
+
+div[style] {
+  width: 200 !important;
+  height: 300px;
+}
 
 body {
   font-family: 'Avenir', serif;
@@ -36,33 +44,8 @@ body {
   padding-bottom: 50px;
 }
 
-p {
-  color: $black;
-}
-
-time {
-  font-weight: bold;
-  font-size: 18px;
-}
-
-span {
-  width: 80px;
-  height: 50px;
-}
-
 .body-style{
   padding-top: 70px;
-}
-
-div[style] {
-  width: 200 !important;
-  height: 300px;
-}
-
-.columns      {
-  background: $grey;
-  color:#FFF;
-  padding:20px;
 }
 
 .flash {
@@ -77,22 +60,6 @@ div[style] {
   margin-top: 5px;
 }
 
-.row {
-  margin-left: -15px;
-  margin-right: -15px;
-}
-
-.modal {
-  text-align: center;
-}
-
-.cross-off-gift-modal {
-  display: inline-block;
-  text-align: left;
-  vertical-align: middle;
-  background-color: $white
-}
-
 .countdown-clock {
   width: 70%;
   margin: 0 auto;
@@ -104,18 +71,4 @@ div[style] {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-@viewport{
-    zoom: 1.0;
-    width: extend-to-zoom;
-}
-
-@media screen and (min-width: 768px) {
-  .modal:before {
-    display: inline-block;
-    vertical-align: middle;
-    content: " ";
-    height: 100%;
-  }
 }
