--- a/app/assets/stylesheets/text.scss
+++ b/app/assets/stylesheets/text.scss
@@ -17,3 +17,17 @@
   color: $pink;
   font-weight: bold;
 }
+
+p {
+  color: $black;
+}
+
+time {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+span {
+  width: 80px;
+  height: 50px;
+}
