--- a/app/views/user_mailer/rsvp_confirmation.html.erb
+++ b/app/views/user_mailer/rsvp_confirmation.html.erb
@@ -111,7 +111,7 @@
 															<table cellpadding="0" cellspacing="0" border="0" width="100%" class="contents" style="font-family:Lato, sans-serif;text-align:left;font-size:20px;line-height:24px;color:#ffffff;">
 																<tr>
 																	<td class="buffered" style="padding-top:0;padding-bottom:13px;padding-right:15px;padding-left:15px;">
-																		<p class="h2" style="margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;font-size:20px;line-height:20px;"><b>NEW RSVP TO WEDDING</b></p>
+																		<p class="h2" style="margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;font-size:20px;line-height:20px;"><b>RSVP TO IAIN AND TANIA'S WEDDING</b></p>
 																	</td>
 																</tr>
 															</table>
@@ -132,23 +132,23 @@
 								<table width="100%" cellpadding="0" cellspacing="0" border="0" class="contents section-main" align="center" style="font-family:Lato, sans-serif;text-align:left;font-size:14px;line-height:19px;background-color:#ffffff;border-left-width:1px;border-left-style:solid;border-left-color:#f2f2f2;border-right-width:1px;border-right-style:solid;border-right-color:#f2f2f2;border-bottom-width:1px;border-bottom-style:solid;border-bottom-color:#f2f2f2;">
 									<tr class="one-col">
 										<td class="inner" style="padding-top:33px;padding-bottom:33px;padding-right:30px;padding-left:30px;">
-											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Dear Iain and Tania,</p><br/>
-											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">A new RSVP has been made for the wedding.</p><br/>
-											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Guest: <%= @guest.full_name %></p>
+											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Dear <%= @guest.first_name %>,</p><br/>
+											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Thank you for RSVPing for Iain and Tania's wedding. Your RSVP has been noted for catering purposes. If any of the details printed here are incorrect, please let us know ASAP:</p><br/><br/>
+											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Please ensure the following details are correct:
 											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Attending: <%= @rsvp.attending %></p>
-
-											<% if @rsvp.attending.downcase == "yes"%>
-												<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Mains Preference: <%=@rsvp.main_meal_preference %></p>
+poinin
+											<% if @rsvp.attending.downcase == 'yes'%>
+												<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Mains Preference: <%=@rsvp.main_meal_preference %></p>>
 												<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Dessert Preference: <%=@rsvp.dessert_preference %></p>
 												<% if @rsvp.dietary_requirements != """" %>
 													<p>Dietary Requirements: <%= @rsvp.dietary_requirements %></p>
 												<% end %>
-												<br/><br/>
+
 												<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">We look forward to seeing you on February 25th.</p><br/><br/>
 
 												<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Love Iain and Tania</p>
 											<% else %>
-												<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">We hope to see you sometime in the future.</p><br/><br/>
+												<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">We hope to see you sometime in the future.</p>
 												<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Love Iain and Tania</p>
 											<% end%>
 										</td>
