Fix our story bug

--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <h2>Our Story</h2>
   <div class="hr"></div>
-  <section class="timeline">
+   <section class="timeline">
     <ul>
       <li>
         <div>
           <time>11 MARCH 2010</time>
-          <p class="para-text">Iain and Tania met at ENGR101 Labs after being place in the same lab group.</p></div>
+          <p class="para-text">Iain and Tania met at ENGR101 Labs after being place in the same lab group.</p>
         </div>
       </li>
       <li>
