--- a/app/assets/stylesheets/text.scss
+++ b/app/assets/stylesheets/text.scss
@@ -1,3 +1,13 @@
+p {
+  color: $black;
+  margin: 0 0 20px;
+}
+
+time {
+  font-weight: bold;
+  font-size: 18px;
+}
+
 .question {
   font-weight: bold;
   font-size: 18px;
@@ -16,18 +26,6 @@
   text-align: center;
   color: $pink;
   font-weight: bold;
-}
-
-p {
-  color: $black;
-}
-
-time {
-  font-weight: bold;
-  font-size: 18px;
-}
-
-span {
   width: 80px;
   height: 50px;
 }
