Rename the details page and tidy page

--- a/app/assets/stylesheets/headings.scss
+++ b/app/assets/stylesheets/headings.scss
@@ -50,8 +50,9 @@ h6 {
 
 .subheading {
   font-family: "Avenir", sans-serif;
-  font-size: 30px;
+  font-size: 40px;
   color: $pink;
+  padding-bottom: 10px;
 }
 
 .fine-details {
