--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
             <li><%= link_to "FAQ", faq_path, class: "dropdown-link" %></li>
             <li><%= link_to "Our Story", our_story_path, class: "dropdown-link" %></li>
             <li><%= link_to "People", people_path, class: "dropdown-link" %></li>
-            <li><%= link_to "The Details", the_details_path, class: "dropdown-link" %></li>
+            <li><%= link_to "Wedding Festivities", wedding_festivities_path, class: "dropdown-link" %></li>
           </ul>
         </li>
       <% end %>
