--- a/app/views/pages/wedding_festivities.html.erb
+++ b/app/views/pages/wedding_festivities.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>The Wedding Day Plan</h2>
+  <h2>Wedding Festivities</h2>
   <div class="hr"></div>
   <div class="countdown-clock">
     <div class="your-clock"></div>
@@ -10,12 +10,12 @@
         <h2 class="subheading">
           <%= link_to "#{d["name"]}", "https://www.google.co.nz/maps/place/Catholic+Parish+of+St+Peter+and+Paul/@-41.2113714,174.9048733,17z/data=!4m13!1m7!3m6!1s0x6d38aa5708e876a1:0xd36c2514129e2f0c!2s60+Knights+Rd,+Lower+Hutt+5010!3b1!8m2!3d-41.2113714!4d174.907062!3m4!1s0x6d38aa5708e876a1:0x6ab11ad6c3af4f64!8m2!3d-41.2113815!4d174.9070699"%>
         </h2>
-        <h4><%= d["time"] %></h4>
-        <h4><%= d["location"] %></h4>
-        <h4><%= d["address_line_1"]%></h4>
-        <h4><%= d["address_line_2"]%></h4>
-        <h4><%= d["address_line_3"]%></h4>
-        <h4><%= d["address_line_4"]%></h4>
+        <h4>TIME</h4><h5> <%= d["time"] %></h4>
+        <h4>LOCATION</h4><h5><%= d["location"] %></h5>
+        <h5><%= d["address_line_1"]%></h5>
+        <h5><%= d["address_line_2"]%></h5>
+        <h5><%= d["address_line_3"]%></h5>
+        <h5><%= d["address_line_4"]%></h5>
       </div>
     <% end %>
   </div>
