Update accomo page to have phone numbers

--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -8,6 +8,7 @@
         <img class="img-responsive tidy-img" src="/images/<%=@photo%>">
         <h4><%= link_to "#{a["name"]}", "#{a["url"]}"%></h4>
         <h5><%= a["address"] %></h5>
+        <h5><%= a["phone_number"] %></h5>
       </div>
     <% end %>
   </div>
