Tidy up accomodation page heading

--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -6,7 +6,7 @@
       <div class="columns large-4">
         <% @photo = a["photo"] %>
         <img class="img-responsive tidy-img" src="/images/<%=@photo%>">
-        <h4><%= link_to "#{a["name"]}", "#{a["url"]}"%></h4>
+        <h4 class="accomodation-heading"><%= link_to "#{a["name"]}", "#{a["url"]}"%></h4>
         <h5><%= a["address"] %></h5>
         <h5><%= a["phone_number"] %></h5>
       </div>
