--- a/app/assets/stylesheets/headings.scss
+++ b/app/assets/stylesheets/headings.scss
@@ -55,6 +55,10 @@ h6 {
   padding-bottom: 10px;
 }
 
+.accomodation-heading {
+  text-transform: uppercase;
+}
+
 .fine-details {
   font-weight: italic;
   text-align: center;
