--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -8,7 +8,7 @@
     <%= f.text_area :email, label: "Your Email" %>
     <%= f.text_area :content, label: "Message", rows: "10" %>
     <%= button_tag(type: "submit", class: "hollow button", id: "send-message-link", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Sending..."}) do %>
-      <i class="glyphicon glyphicon-send"></i> Send
+      Send
     <% end %>
   <% end %>
 </div>
