Tidy up error pages routes and button styles

--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,5 +1,5 @@
-<div class="container level-header">
+<div class="container">
   <h2>Internal Server Error</h2>
   <p>Looks like something went wrong</p>
-  <%= link_to "Home", root_path, class: "hollow button" %>
+  <%= link_to "Home", root_path, class: "hollow button", id: "home-link" %>
 </div>
