--- a/app/views/errors/missing_authentication.html.erb
+++ b/app/views/errors/missing_authentication.html.erb
@@ -1,5 +1,5 @@
-<div class="container level-header">
+<div class="container">
   <h2>Authentication Error</h2>
   <p>Looks like you are not allowed to go to this page.</p>
-  <%= link_to "Home", root_path, class: "hollow button" %>
+  <%= link_to "Home", root_path, class: "hollow button", id: "home-link" %>
 </div>
