Remove unwanted css class

--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -1,5 +1,5 @@
 <% @message = Message.new %>
-<div class="container level-header">
+<div class="container">
   <h2>Contact Us</h2>
   <p>Feel free to get in touch with us below if you have any questions or something to share</p>
   <%= bootstrap_form_for(@message, url: messages_path, layout: :horizontal)  do |f| %>
