Fix css to use ids not classes and get rid of unused classes

--- a/app/assets/stylesheets/headings.scss
+++ b/app/assets/stylesheets/headings.scss
@@ -43,33 +43,37 @@ h6 {
   margin-bottom: 0px;
 }
 
-.rsvp-date {
+#rsvp-date {
   text-align: center;
   font-style: italics;
 }
 
-.subheading {
+#festivities-subheading {
   font-family: "Avenir", sans-serif;
   font-size: 40px;
   color: $pink;
   padding-bottom: 10px;
 }
 
-.accomodation-heading {
+#accomodation-heading {
   text-transform: uppercase;
 }
 
-.fine-details {
+#homepage-wedding-details {
   font-weight: italic;
   text-align: center;
   margin-top: 0px;
   color: $pink;
 }
 
-.bridesmaids-groomsmen {
+#bridesmaids-groomsmen {
   padding-top: 30px;
 }
 
-.dropdown-title {
+#dropdown-title {
   color: $white;
+}
+
+#rsvp-date-heading {
+  text-align: center;
 }
