--- a/app/assets/stylesheets/text.scss
+++ b/app/assets/stylesheets/text.scss
@@ -17,11 +17,11 @@ time {
   padding-bottom: 14px;
 }
 
-.para-text {
+#story-event-text {
   color: $pink;
 }
 
-.caption {
+#main-people-name {
   text-transform: uppercase;
   text-align: center;
   color: $pink;
