--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container level-header cg-page">
+<div class="container">
 	<h2>Contributions</h2>
 	<table class="table table-striped">
 		<thead>
