--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -7,7 +7,7 @@
         <li>
           <div>
             <time><%= event["date"] %></time>
-            <p class="para-text"><%= event["description"] %></p>
+            <p id="story-event-text"><%= event["description"] %></p>
           </div>
         </li>
       <% end %>
