--- a/app/views/pages/people.html.erb
+++ b/app/views/pages/people.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
-  <div class="main-people">
+  <div id="main-people">
     <%= render "pages/main_people" %>
   </div>
-  <br/> 
-  <div class="wedding-party">
+  <br/>
+  <div id="wedding-party">
     <%= render "pages/wedding_party" %>
   </div>
-  <div class="bridesmaids-groomsmen">
+  <div id="bridesmaids-groomsmen">
     <%= render "pages/bridesmaids_groomsmen" %>
   </div>
 </div>
