--- a/app/views/rsvps/index.html.erb
+++ b/app/views/rsvps/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container level-header rsvp-page">
+<div class="container">
   <h2>Rsvps</h2>
   <% @rsvps = locals[:guests] if @rsvps.nil? %>
   <div class="pull-right">
