--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -12,7 +12,7 @@
   margin-left: 50px;
 }
 
-#login-link, #cross-gift-link, #send-message-link, #rsvp-submit-link, #save-contribution-link, #home-link, #resend-message-link {
+#login-link, #save-guest-link, #cross-gift-link, #send-message-link, #rsvp-submit-link, #save-contribution-link, #home-link, #resend-message-link {
  border-radius: 2px;
  border-color: $pink;
  color: $pink;
