--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -1,13 +1,11 @@
-<div class="container form-scrollable">
+<div class="container">
   <%= bootstrap_form_for(@guest, layout: :horizontal)  do |f| %>
     <%= f.text_field :first_name, placeholder: "Enter first name", class: "form-control required", autofocus: true %>
     <%= f.text_field :surname, placeholder: "Enter surname", class: "form-control required" %>
     <%= f.text_field :address, placeholder: "Enter address", class: "form-control required" %>
     <%= f.text_field :email, placeholder: "Enter email", class: "form-control required" %>
     <%= f.select :age_category, ["adult", "child", "toddler" ], :prompt => "Select Dessert Preference", class: "form-control", label: "Dessert Preference" %>
-    <%= button_tag(type: "submit", class: "hollow button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
-      <i class="glyphicon glyphicon-floppy-saved"></i> Save
-    <% end %>
+    <%= f.submit "Save", class: "hollow button", id: "save-guest-link" %>
     <%= link_to "Cancel", guests_path, id: "cancel-button" %>
   <% end %>
 </div>
