--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container level-header guest-page">
+<div class="container">
   <h2>Guest List</h2>
   <% @guests = locals[:guests] if @guests.nil? %>
   <div class="pull-right">
