--- a/app/views/pages/_bridesmaids_groomsmen.html.erb
+++ b/app/views/pages/_bridesmaids_groomsmen.html.erb
@@ -5,19 +5,19 @@
     <div class="row text-center">
       <div class="columns large-4">
         <% @photo_1 = b["photo_1"] %>
-        <img class="img-responsive tidy-img" src="/images/<%=@photo_1%>">
+        <%= image_tag(@photo_1, class: "img-responsive tidy-img") %>
         <h4><%= b["name_1"] %></h4>
         <h5><%= b["title_1"] %></h5>
       </div>
       <div class="columns large-4">
         <% @photo_2 = b["photo_2"] %>
-        <img class="img-responsive tidy-img" src="/images/<%=@photo_2%>">
+        <%= image_tag(@photo_2, class: "img-responsive tidy-img") %>
         <h4><%= b["name_2"]%></h4>
         <h5><%= b["title_2"] %></h5>
       </div>
       <div class="columns large-4">
         <% @photo_3 = b["photo_3"] %>
-        <img class="img-responsive tidy-img" src="/images/<%=@photo_3%>">
+        <%= image_tag(@photo_3, class: "img-responsive tidy-img") %>
         <h4><%= b["name_3"] %></h4>
         <h5><%= b["title_3"] %></h5>
       </div>
