--- a/app/views/pages/_modal.html.erb
+++ b/app/views/pages/_modal.html.erb
@@ -1,10 +1,10 @@
-<div class="container cross-off-gift-modal">
+<div class="container" id="cross-off-gift-modal">
   <div class="modal-header modal-heading-style">
     <h3 id="myModalLabel modal-heading-style">Contribute to Honeymoon</h3>
   </div>
   <div class="modal-body">
     <p>Thank you for choosing to contribute towards Iain and Tania's honeymoon. Please record your name(s) and contribution amount so that we can have a written record of everyone"s gifts.</p>
-    <p>Then you can transfer the money you wish to contribute via Online Banking</p>
+    <p>Then you can transfer the money you wish to contribute via Online Banking.</p>
     <%= render "contributions/form" %>
   </div>
 </div>
