--- a/app/views/pages/wedding_festivities.html.erb
+++ b/app/views/pages/wedding_festivities.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <% @the_details.each do |d| %>
       <div class="columns large-6">
-        <h2 class="subheading">
+        <h2 id="festivities-subheading">
           <%= link_to "#{d["name"]}", "https://www.google.co.nz/maps/place/Catholic+Parish+of+St+Peter+and+Paul/@-41.2113714,174.9048733,17z/data=!4m13!1m7!3m6!1s0x6d38aa5708e876a1:0xd36c2514129e2f0c!2s60+Knights+Rd,+Lower+Hutt+5010!3b1!8m2!3d-41.2113714!4d174.907062!3m4!1s0x6d38aa5708e876a1:0x6ab11ad6c3af4f64!8m2!3d-41.2113815!4d174.9070699"%>
         </h2>
         <h4>TIME</h4><h5> <%= d["time"] %></h4>
