--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div>
     <h3>IAIN WALKER & TANIA JACOB</h3>
-    <h4 class="fine-details">25 FEBRUARY 2017 in LOWER HUTT, NEW ZEALAND</h4>
+    <h4 id="homepage-wedding-details">25 FEBRUARY 2017 in LOWER HUTT, NEW ZEALAND</h4>
   </div>
   <div>
     <%= image_tag("us.jpg", :alt => "us", class:"img-responsive") %>
