--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="form-scrollable">
+<div class="container">
   <%= bootstrap_form_for(@rsvp, layout: :horizontal, label_errors: false, inline_errors: false)  do |f| %>
     <% if @rsvp.errors.messages.present? %>
       <div class="alert alert-warning" role="alert">
