Rename cross off gift as contribute gift

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -4,7 +4,7 @@
   line-height: 4em;
 }
 
-#cross-gift-link, #rsvp-submit-link {
+#contribute-gift-link, #rsvp-submit-link {
   margin-left: -15px;
 }
 
@@ -12,7 +12,7 @@
   margin-left: 50px;
 }
 
-#login-link, #save-guest-link, #cross-gift-link, #send-message-link, #rsvp-submit-link, #save-contribution-link, #home-link, #resend-message-link {
+#login-link, #save-guest-link, #contribute-gift-link, #send-message-link, #rsvp-submit-link, #save-contribution-link, #home-link, #resend-message-link {
  border-radius: 2px;
  border-color: $pink;
  color: $pink;
