--- a/app/views/pages/_modal.html.erb
+++ b/app/views/pages/_modal.html.erb
@@ -1,4 +1,4 @@
-<div class="container" id="cross-off-gift-modal">
+<div class="container" id="contribute-gift-modal">
   <div class="modal-header modal-heading-style">
     <h3 id="myModalLabel modal-heading-style">Contribute to Honeymoon</h3>
   </div>
