--- a/app/views/pages/gift_registry.html.erb
+++ b/app/views/pages/gift_registry.html.erb
@@ -6,9 +6,9 @@
     <p>During our honeymoon we plan on going on lagoon cruises, pamper treatments, quad bike adventures, kayaking, snorkelling and stand up paddle boarding as well as having some great cocktails and food.</p>
     <p>If you would like to help us with that, then please click the contribute gift button and record your name and the amount you will contribute via Online Banking. This will help us easily know who has contributed what.</p>
 
-    <p>Our account number is <i> 03-0515-0011251-01 (IAIN RHODES WALKER & TANIA LILIAN JACOB)</i>.Please record your name in the Reference field whilst transferring your contribution. We really appreciate your generosity and look forward to seeing you on February 25th. If you have any questions please feel free to contact us via this website.</p>
+    <p>Our account number is <i> 03-0515-0011251-01 (IAIN RHODES WALKER & TANIA LILIAN JACOB)</i>. Please record your name in the Reference field whilst transferring your contribution. We really appreciate your generosity and look forward to seeing you on February 25th. If you have any questions please feel free to contact us via this website.</p>
     <p>Love Iain and Tania</p>
   </div>
-  <p><%= link_to "Contribute Gift", cross_off_gift_path, class: "hollow button" , id: "cross-gift-link", remote: :true, data: { toggle: "modal", target: "#modal-window" } %></p>
+  <p><%= link_to "Contribute Gift", contribute_gift_path, class: "hollow button" , id: "contribute-gift-link", remote: :true, data: { toggle: "modal", target: "#modal-window" } %></p>
   <div id="modal-window" class="modal" role="dialog" aria-labelledby="myModalLabel" ></div>
 </div>
