--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -18,3 +18,7 @@
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .active > a {
   background-image: none !important;
 }
+
+#dropdown-title {
+  color: $white;
+}
