--- a/app/views/pages/_modal.html.erb
+++ b/app/views/pages/_modal.html.erb
@@ -1,6 +1,6 @@
 <div class="container" id="contribute-gift-modal">
-  <div class="modal-header modal-heading-style">
-    <h3 id="myModalLabel modal-heading-style">Contribute to Honeymoon</h3>
+  <div class="modal-header" id="modal-heading-style">
+    <h3 id="myModalLabel">Contribute to Honeymoon</h3>
   </div>
   <div class="modal-body">
     <p>Thank you for choosing to contribute towards Iain and Tania's honeymoon. Please record your name(s) and contribution amount so that we can have a written record of everyone"s gifts.</p>
