--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,10 +1,10 @@
-<h2>Faq</h2>
-<div class="hr"></div>
-<% @faqs.each do |faq| %>
-  <div class="each-q">
-    <p class="question <%= faq["q_class"]%>"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <%= faq["question"] %></p>
-  </div>
-  <div class="each-a">
-    <p class="answer hidden <%= faq["a_class"]%>"> <%= faq["answer"] %></p>
-  </div>
-<% end %>
+<div class="container faq-page">
+  <h2>Faq</h2>
+  <div class="hr"></div>
+  <% @faqs.each do |faq| %>
+    <dl>
+      <dt aria-label="question" class="question <%= faq["q_class"]%>"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <%= faq["question"] %></dt>
+      <dd aria-label="answer" class="answer hidden <%= faq["a_class"]%>"> <%= faq["answer"] %></dd>
+    </dl>
+  <% end %>
+</div>
