--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container our-story-page">
   <h2>Our Story</h2>
   <div class="hr"></div>
   <section class="timeline">
