--- a/app/assets/stylesheets/headings.scss
+++ b/app/assets/stylesheets/headings.scss
@@ -26,11 +26,12 @@ h6 {
   font-size: 10px;
 }
 
-.hr {
+hr {
   display: block;
   height: 40px;
   background-repeat: no-repeat;
   margin-bottom: 30px;
   background-position: center;
   background-image: url("../images/divider.png");
+  border-top: 0px;
 }
