--- a/app/views/user_mailer/rsvp_confirmation.text.erb
+++ b/app/views/user_mailer/rsvp_confirmation.text.erb
@@ -1,4 +1,4 @@
-Dear <%= @guest.first_name %>,
+Dear <%= @rsvp.guest_name %>,
 
 Thank you for RSVPing for Iain and Tania's wedding. Your RSVP has been noted for catering purposes. If any of the details printed here are incorrect, please let us know ASAP:
 
@@ -22,4 +22,3 @@ We hope to see you sometime in the future.
 Love,
 Iain and Tania
 <% end%>
-
