--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -9,7 +9,7 @@
            <% end %>
        </div>
     <% end%>
-    <%= f.text_field :full_name, placeholder: "Enter full name", class: "form-control required", autofocus: true, label: "Full Name" %>
+    <%= f.text_field :guest_name, placeholder: "Enter full name", class: "form-control required", autofocus: true, label: "Full Name" %>
     <%= f.text_field :email, placeholder: "Enter email", class: "form-control required", label: "Email" %>
     <%= f.select :attending, [ "Yes", "No" ], :prompt => "Are you attending?", class: "form-control required" %>
     <div class="optional-elements">
