--- a/app/views/pages/gift_registry.html.erb
+++ b/app/views/pages/gift_registry.html.erb
@@ -5,7 +5,7 @@
     <p>We’ve been asked what we’d like for a gift and the answer is simple: you, at our wedding, having a great time. But if you insist then we’ll say what we’d also love is the most amazing honeymoon. We are off to the Cook Islands for our honeymoon. We are planning to stay there for 10 days from Monday 27 February (5 nights in Rarotonga and then 4 nights in Aitutaki).</p>
     <p>During our honeymoon we plan on going on lagoon cruises, pamper treatments, quad bike adventures, kayaking, snorkelling and stand up paddle boarding as well as having some great cocktails and food.</p>
     <p>If you would like to help us with that, then please feel free to transfer money into our Honeymoon Account via Online Banking.</p>
-    <p>We bank with Westpac and our account number is <i>03-0515-0011251-01 (IAIN RHODES WALKER & TANIA LILIAN JACOB)</i>. We really appreciate your generosity and look forward to seeing you on February 25th. If you have any questions please feel free to contact us via this website.</p>
+    <p>Our account is at Westpac Bank and the account number is <i>03-0515-0011251-01 (IAIN RHODES WALKER & TANIA LILIAN JACOB)</i>. We really appreciate your generosity and look forward to seeing you on February 25th. If you have any questions please feel free to contact us via this website.</p>
     <p>Love Iain and Tania</p>
   </div>
 </div>
