--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container new-rsvp">
   <h2>Rsvp</h2>
-  <h4>Please RSVP for each individual guest in your party by Friday 20 January 2017</h4>
+  <h4>Please submit a RSVP for each guest in your family/group by Friday 20 January 2017 for catering purposes</h4>
   <hr>
   <%= render "form" %>
 </div>
