--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,5 +1,6 @@
 <div class="container homepage">
-  <h3>IAIN WALKER & TANIA JACOB - 25 FEBRUARY 2017</h3>
+  <h3>IAIN WALKER & TANIA JACOB</h3>
+  <h3>25 FEBRUARY 2017</h3>
   <%= render "pages/info" %>
   <p>
     <%= image_tag("us.jpg", alt: "us", class:"img-responsive") %>
