--- a/app/views/pages/_info.html.erb
+++ b/app/views/pages/_info.html.erb
@@ -1,14 +1,17 @@
-<div class="container festivities">
+<div class="container info">
   <% if @info.nil? %>
     <% @info = JSON.parse((File.read("#{Rails.root}/public/json/info.json"))) %>
+  <% else %>
+    <h2>Info</h2>
+    <hr>
   <% end %>
   <div class="row">
     <% @info.each do |d| %>
       <div class="columns large-6">
-        <h3><%= link_to "#{d["name"]}", d["url"]%></h3>
+        <h3><%= d["name"] %></h3>
         <dl>
           <dt>TIME</dt><dd><time><%= d["time"] %></time></dd><br>
-          <dt>LOCATION</h4><h5><%= d["location"] %></dt>
+          <dt>LOCATION</h4><h5><%= link_to "#{d["location"]}", d["url"] %></dt>
           <dd><%= d["address_line_1"]%></dd>
           <dd><%= d["address_line_2"]%></dd>
           <dd><%= d["address_line_3"]%></dd>
