--- a/app/views/pages/_info.html.erb
+++ b/app/views/pages/_info.html.erb
@@ -1,4 +1,4 @@
-<div class="container info">
+<div class="container info-page">
   <% if @info.nil? %>
     <% @info = JSON.parse((File.read("#{Rails.root}/public/json/info.json"))) %>
   <% else %>
