--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container new-rsvp">
+<div class="container new-rsvp-page">
   <h2>Rsvp</h2>
   <h4>Please submit a RSVP for each guest in your family/group by Friday 20 January 2017 for catering purposes</h4>
   <hr>
