--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -1,4 +1,4 @@
-<div class="container accomodation">
+<div class="container accomodation-page">
   <h2>Accomodation</h2>
   <hr>
   <div class="row">
