--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -14,7 +14,7 @@
 
 .new-rsvp-page {
   h5 { text-align: center; font-style: italics; }
-  h4 { text-align: center; }
+  h4 { text-align: center; padding-bottom: 10px; }
 }
 
 .accomodation-page, .info-page {
