--- a/app/views/admin_mailer/rsvp_confirmation.html.erb
+++ b/app/views/admin_mailer/rsvp_confirmation.html.erb
@@ -133,7 +133,7 @@
 									<tr class="one-col">
 										<td class="inner" style="padding-top:33px;padding-bottom:33px;padding-right:30px;padding-left:30px;">
 											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Dear <%= @rsvp.guest_name %>,</p><br/>
-											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Thank you for RSVPing for Iain and Tania's wedding. Your RSVP has been noted for catering purposes. If any of the details printed here are incorrect, please let us know ASAP:</p><br/><br/>
+											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Thank you for RSVPing for Iain and Tania's wedding. Your RSVP has been noted for catering purposes. If any of the details printed here are incorrect, please let us know ASAP (tanzjacob@gmail.com):</p><br/><br/>
 											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Please ensure the following details are correct:
 											<p style="margin-top:0;margin-right:0;margin-left:0;margin-bottom:12px;">Attending: <%= @rsvp.attending %></p>
 											<% if @rsvp.attending.downcase == 'yes'%>
