--- a/app/views/pages/_info.html.erb
+++ b/app/views/pages/_info.html.erb
@@ -9,7 +9,8 @@
       <div class="columns large-6">
         <h3><%= d["name"] %></h3>
         <dl>
-          <dt>TIME</dt><dd><time><%= d["time"] %></time></dd><br>
+          <dt>TIME</dt>
+          <dd class="info-time"><time><%= d["time"] %></time></dd>
           <dt>LOCATION</h4><h5><%= link_to "#{d["location"]}", d["url"] %></dt>
           <dd><%= d["address_line_1"]%></dd>
           <dd><%= d["address_line_2"]%></dd>
