--- a/app/views/pages/_main_people.html.erb
+++ b/app/views/pages/_main_people.html.erb
@@ -2,11 +2,13 @@
   <h2>Bride, Groom and Parents</h2>
   <div id="owl-demo" class="owl-carousel">
     <% @main_people.each do |d| %>
-      <div class="item">
+      <dl class="item">
+        <dt>Person's Photo</dt>
         <% @photo = d["photo"] %>
-        <%= image_tag(@photo, class: "img-responsive tidy-img") %>
-        <span><%= d["name"] %></span>
-      </div>
+        <dd><%= image_tag(@photo, class: "img-responsive tidy-img") %></dd>
+        <dt>Person's Name</dt>
+        <dd><span><%= d["name"] %></span></dd>
+      </dl>
     <% end %>
   </div>
 </div>
