--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -6,7 +6,9 @@
         <% @photo = a["photo"] %>
         <%= image_tag(@photo, class: "img-responsive tidy-img") %>
         <dl>
-          <dt><%= link_to "#{a["name"]}", "#{a["url"]}"%></dt>
+          <dt>Accomodation Name</dt>
+          <dd><%= link_to "#{a["name"]}", "#{a["url"]}"%></dd>
+          <dt>Accomodation Address</dt>
           <dd><%= a["address"] %></dd>
           <dd><%= a["phone_number"] %></dd>
         </dl>
