--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -4,15 +4,15 @@
   line-height: 4em;
 }
 
-#contribute-gift-link, #rsvp-submit-link {
+#rsvp-submit-link {
   margin-left: -15px;
 }
 
-#send-message-link, #save-contribution-link, #rsvp-submit-link {
+#send-message-link, #rsvp-submit-link {
   margin-left: 50px;
 }
 
-#login-link, #save-guest-link, #contribute-gift-link, #send-message-link, #rsvp-submit-link, #save-contribution-link, #home-link, #resend-message-link {
+#login-link, #save-guest-link, #send-message-link, #rsvp-submit-link, #home-link, #resend-message-link {
  border-radius: 2px;
  border-color: $pink;
  color: $pink;
